[tool.poetry]
name = "bidpazari"
version = "0.1.0"
description = ""
authors = [
    "Berk Ozbalci <berkozbalci@gmail.com>",
    "Fatih Akca <fatihakca5@gmail.com>",
]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
Django = "=2.2.7"
Pillow = "=6.2.1"

[tool.poetry.dev-dependencies]
black = "=19.10b0"
isort = "=4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 100
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true

[tool.black]
line-length = 100
skip-string-normalization = true
