[tool.poetry]
name = "bidpazari"
version = "0.1.0"
description = ""
authors = [
    "Berk Ozbalci <berkozbalci@gmail.com>",
    "Fatih Akca <fatihakca5@gmail.com>",
]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
Django = "=2.2.7"
Pillow = "=6.2.1"
django-webpack-loader = "^0.6.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
black = "=19.10b0"
isort = "=4.3.21"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true

[tool.black]
skip-string-normalization = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

